--- a/public/shuffle-sequence.html
+++ b/public/shuffle-sequence.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8" />
   <title>Preparing Your Reading</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="preload" as="font" href="/assets/fonts/BookmanJFPro-Regular.woff2" type="font/woff2" crossorigin>
+  <link rel="preload" as="font" href="/assets/fonts/BookmanJFPro-Regular.woff" type="font/woff" crossorigin>
 
   <style>
     @font-face {
       font-family: 'Bookman JF Pro';
-      src: url('/assets/fonts/BookmanJFPro-Regular.woff2') format('woff2');
+      src: url('/assets/fonts/BookmanJFPro-Regular.woff') format('woff');
       font-weight: normal; font-style: normal; font-display: swap;
     }
 
